--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ body {
   background-color: var(--primary-grey);
 }
 
+p {
+  margin: 0;
+}
+
 .siema {
   margin: auto;
 }
@@ -36,7 +40,8 @@ body {
   width: 100%;
   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
-  padding: 30px;
+  padding: calc(var(--vh) * 6) 30px;
+  overflow: hidden;
 }
 
 .hero-slide {  
@@ -46,23 +51,43 @@ body {
   justify-content: flex-end;
 }
 
-.bg {
-  position: absolute;
+.hero-slide__1 {
+  background: url(../assets/asset2.svg) left calc(-45 * var(--vh))/calc(78.41 * var(--vh)) calc(158.92 * var(--vh)) no-repeat;
 }
 
-.bg--hero {
-  width: calc(78.41 * var(--vh));
-  height: calc(158.92 * var(--vh));
-  background: url(../assets/asset2.svg) no-repeat;
-  position: absolute;
-  top: -300px;
-  left: 0;
-  z-index: -2;
+.hero-slide__2 {
+  background: url(../assets/asset1.svg) right calc(-40 * var(--vh))/calc(76.16 * var(--vh)) calc(187.85 * var(--vh)) no-repeat;
+  justify-content: space-between;
+}
+
+.bg--hero__2 {
+  width: calc(76.16 * var(--vh));
+  height: calc(187.85 * var(--vh));
+  background: url(../assets/asset1.svg) no-repeat;
+  top: -400px;
+  right: 0;
 }
 
 .title {
   font-size: 4rem;
-  margin-bottom: 1.5em;
+  margin-bottom: calc(var(--vh) * 14);
+}
+
+.body-text {
+  font-size: 1.15rem;
+  line-height: 1.5;
+  margin-bottom: calc(var(--vh) * 15);
+}
+
+.cta-text {
+  font-weight: 700;
+  margin-top: auto;
+}
+
+.btn-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .btn {
