--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 :root {
   --primary: #2CF27C;
+  --primary__dark: #0EDD62;
   --primary-text: #101617;
   /* --primary-text: #1C1C1C; */
   --secondary-text: #90999C;
   --white: #FFFFFF;
-  --primary-grey: #F7F8FA;
-  --secondary-grey: #ECECEC;
-  --main-offset-vertical: 60px;
+  --primary-grey: #F5F6FA;
+  --secondary-grey: #E4EAEC;
+  --main-offset-vertical: calc(var(--vh) * 6);
   --main-offset-horizontal: 30px;
   --offset: 20px;
   --vh: 1vh;
@@ -40,8 +41,11 @@ p {
   width: 100%;
   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
-  padding: calc(var(--vh) * 6) 30px;
-  overflow: hidden;
+  padding: var(--main-offset-vertical) var(--main-offset-horizontal);
+  overflow-x: hidden;
+  background: var(--white);
+  position: relative;
+  z-index: 1;
 }
 
 .hero-slide {  
@@ -60,17 +64,23 @@ p {
   justify-content: space-between;
 }
 
-.bg--hero__2 {
-  width: calc(76.16 * var(--vh));
-  height: calc(187.85 * var(--vh));
-  background: url(../assets/asset1.svg) no-repeat;
-  top: -400px;
-  right: 0;
+.slide-bg {
+  width: calc(149.02 * var(--vh));
+  height: calc(59.04 * var(--vh));
+  position: absolute;
+  z-index: -2;
+  left: calc(-16.49 * var(--vh));
+  top: -20px;
+  background: var(--white) url(../assets/asset3.svg) no-repeat;
 }
 
 .title {
   font-size: 4rem;
   margin-bottom: calc(var(--vh) * 14);
+}
+
+.slide-title {
+  font-size: 2.5rem;
 }
 
 .body-text {
@@ -102,9 +112,75 @@ p {
   border-radius: 12px;
   font-size: 1.15rem;
   font-weight: 600;
+  box-shadow: none;
+  transition: all .2s ease-in;
+}
+
+.btn-form {
+  height: 38px;
+}
+
+.btn-small {
+  width: 120px;
 }
 
 .btn-large {
   width: 100%;
+}
+
+.btn__outline {
+  color: var(--primary);
+  background: transparent;
+  border: 2px solid var(--primary);
+}
+
+.btn-secondary {
+  color: var(--primary-text);
+  background: var(--primary-grey);
+}
+
+.btn:hover {
   box-shadow: 0px 8px 16px rgba(44, 242, 124, 0.25);
+  background: var(--primary__dark);
+  transition: box-shadow .2s ease-in,
+    background .2s ease-in;
+}
+
+.btn__outline:hover {
+  box-shadow: none;
+  background: transparent;
+  color: var(--primary__dark);
+  border-color: var(--primary__dark);
+  transition: color .2s ease-in,
+    border-color .2s ease-in;
+}
+
+.btn-secondary:hover {
+  box-shadow: none;
+  background: #F1F1F1;
+  transition: background .2s ease-in;
+}
+
+.next {
+  box-shadow: 0px 8px 16px rgba(44, 242, 124, 0.25);  
+}
+
+.bottom-nav {
+  width: 100vw;
+  padding: var(--offset) var(--main-offset-horizontal) var(--main-offset-vertical);
+  background: var(--white);
+  border-radius: 20px 20px 0 0;
+  box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+  transform: translateY(120px);
+  transition: transform 0.2s ease;
+}
+
+.bottom-nav.is-visible {
+  visibility: visible;
+  transform: translateY(0);
+  transition: transform 0.2s ease 0.3s;
 }
