cars slide done

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 }
 
 html {
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Montserrat', sans-serif;
   color: var(--primary-text);
   line-height: 1.2;
@@ -29,7 +29,7 @@ body {
   background-color: var(--primary-grey);
 }
 
-p, h1, h2 {
+p, h1, h2, h3 {
   margin: 0;
 }
 
@@ -76,16 +76,21 @@ p, h1, h2 {
 }
 
 .title {
-  font-size: 4rem;
+  font-size: 3.5rem;
   margin-bottom: calc(var(--vh) * 14);
 }
 
 .slide-title {
-  font-size: 2.5rem;
+  font-size: 2rem;
+}
+
+.subtitle {
+  font-size: 1.5rem;
+  margin-top: var(--offset);
 }
 
 .body-text {
-  font-size: 1.15rem;
+  font-size: .875rem;
   line-height: 1.5;
   margin-bottom: calc(var(--vh) * 15);
 }
@@ -111,10 +116,11 @@ p, h1, h2 {
   color: var(--white);
   background: var(--primary);
   border-radius: 12px;
-  font-size: 1.15rem;
+  font-size: 1rem;
   font-weight: 600;
   box-shadow: none;
   transition: all .2s ease-in;
+  padding: 0 2rem;
 }
 
 .btn-small {
@@ -187,6 +193,10 @@ p, h1, h2 {
   margin-top: var(--offset);
 }
 
+.is-hidden {
+  display: none;
+}
+
 label {
   color: var(--secondary-text);
   display: block;
@@ -201,8 +211,8 @@ select {
   color: var(--primary-text);
   background: var(--primary-grey);
   border-radius: 8px;
-  padding: 0 1rem;
-  font-size: 1.15rem;
+  padding: 0 1.5rem;
+  font-size: 1rem;
 }
 
 select {
@@ -265,12 +275,12 @@ input[type="radio"]:checked + label:hover {
 }
 
 .slider .btn {  
-  width: 130px;
+  width: 140px;
 }
 
 .slider-item {
   position: relative;
-  min-width: 130px;
+  min-width: 140px;
   margin-right: 1rem;
 }
 
@@ -307,8 +317,15 @@ input[type="radio"]:checked + label:hover {
   margin-top: var(--offset);
 }
 
+.sum-label {
+  color: var(--secondary-text);
+  font-size: .875rem;
+  margin-top: auto;
+}
+
 .sum-value {
   font-weight: 500;
+  line-height: 1;
 }
 
 
